--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,17 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>WebLab2 Maven Webapp</name>
+  <distributionManagement>
+    <downloadUrl>
+      http://localhost:8081/WebLab2/
+    </downloadUrl>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>weblab2</id>
+      <name>WebLab2</name>
+      <url>http://localhost:8081/WebLab2/</url>
+    </repository>
+  </distributionManagement>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -13,6 +24,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -28,5 +44,15 @@
   </dependencies>
   <build>
     <finalName>WebLab2</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
