--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,6 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>WebLab2 Maven Webapp</name>
-  <distributionManagement>
-    <downloadUrl>
-      http://localhost:8081/WebLab2/
-    </downloadUrl>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>weblab2</id>
-      <name>WebLab2</name>
-      <url>http://localhost:8081/WebLab2/</url>
-    </repository>
-  </distributionManagement>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -45,14 +34,15 @@
   <build>
     <finalName>WebLab2</finalName>
       <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>8</source>
-                  <target>8</target>
-              </configuration>
-          </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.1</version>
+          <configuration>
+              <source>8</source>
+              <target>8</target>
+          </configuration>
+        </plugin>
       </plugins>
   </build>
 </project>
